# opendlv-ui-server

./: .codecov.yml  .multi-arch.sh  .travis.yml  CMakeLists.txt  Dockerfile.aarch64  Dockerfile.amd64  Dockerfile.armhf  README.md  opendlv-ui-server-config.cmake
src/: http-request.cpp  http-request.hpp  http-response.cpp  http-response.hpp  opendlv-ui-server.cpp  opendlv-ui-server.hpp  session-data.cpp  session-data.hpp  websockets-server.cpp  websockets-server.hpp
test/: test-opendlv-ui-server.cpp  test-websockets-server.cpp
